@@ -11,6 +11,10 @@
 	* info/t/spec-file-node.sh, info/t/spec-no-node.sh, 
 	info/t/spec-menu.sh: New tests.
 
+	* info/info.c (get_initial_file): Don't take a user-specified 
+	filename as an argument.
+	<--file>: Moved to main.
+
 2014-10-09  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.texi (Node Line Requirements, Writing a Menu):
